# pseudopacman

./: README.md  meson.build  pacman
files/: map.txt
include/: entity.h  map.h  opaque_types.h  types.h  utilities.h  world.h
src/: entity.c  game.c  main.c  map.c  meson.build  opaque_types.c  utilities.c  world.c
